--- a/carrinho-final/css/style.css
+++ b/carrinho-final/css/style.css
@@ -1,3 +1,15 @@
+:root{
+   --card-blue: #0e141b;
+   --background: #202b3b;
+   --accent-green: #a1cd44;
+   --blue-cool:#4b619b;
+   --font-white: #f3f3f3;
+   --header: #212b45;
+   --search-bar: #1d263d;
+   --red-accent: #a7473c;
+ }
+ 
+
 *{
    font-family: 'Nunito', sans-serif;
    margin:0; padding:0;
@@ -14,7 +26,7 @@ html{
 }
 
 body{
-   background: #eee;
+   background: var(--background);
 }
 
 .container{
@@ -32,8 +44,6 @@ body{
    background: white;
    padding: 10px 20px;
    border: 10px;
-   
-   
 
 }
 
@@ -46,14 +56,14 @@ body{
 .produto{
    text-align: center;
    padding:3rem 2rem;
-   background: #fff;
+   background: var(--card-blue);
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-   outline: .1rem solid #ccc;
    outline-offset: -1.5rem;
+   border-radius: 10px;
 }
 
 .produto:hover{   /* muda a escala da borda*/
-   outline: .2rem solid #222;
+   outline: .2rem solid var(--font-white);
    outline-offset: 0;
 }
 .produto img{
@@ -67,17 +77,18 @@ body{
 .produto h3{
    padding:.5rem 0;
    font-size: 2rem;
-   color:#444;
+   color: var(--font-white);
 }
 
 .info {
    display: flex;
-   flex-direction: row; 
+   padding-top: 2rem;
+   flex-direction: column; 
    justify-content: space-between;
 }
 
 .nomePreco{
-   width: 50%;
+   padding-bottom: 3rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -88,33 +99,58 @@ body{
    display: flex;
    justify-content: center; 
    align-items: center; 
-   width: 50%;
+ 
 }
 
 .botaoCarrinho {
-   padding: 3rem;
-   color: black;
-   background-color: #fff;
-   outline: .1rem solid #222;
+   width: 60%;
+   padding: 2rem;
+   color: var(--font-white);
+   background-color: var(--blue-cool);
    font-size: 1.5rem;
    font-weight: bold;
    transition: background-color 0.3s, color 0.3s; 
+   border-radius: 5px;
    text-align: center; 
    cursor: pointer;
 }
 
+
+.produtosRemove{
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+   gap:2rem;
+}
+
+.botaoRemove {
+   width: 60%;
+   padding: 2rem;
+   color: var(--font-white);
+   background-color: var(--blue-cool);
+   font-size: 1.5rem;
+   font-weight: bold;
+   transition: background-color 0.3s, color 0.3s; 
+   border-radius: 5px;
+   text-align: center; 
+   cursor: pointer;
+}
+
+.botaoRemove:hover{
+   color: var(--font-white);
+   background-color:  var(--red-accent);
+}
+
 .botaoCarrinho:hover {
-   color: #fff; 
-   background-color: #222; 
+   color: var(--font-white); 
+   background-color: var(--accent-green); 
 }
 
 
 .preco {
    font-size: 2rem;
-   color: #444;
+   color: var(--font-white);
    padding-bottom: 1rem;
 }
-
 
 
 @media (max-width:991px){
